fix overflow

--- a/components/FieldPrintLogo/FieldPrintLogo.module.scss
+++ b/components/FieldPrintLogo/FieldPrintLogo.module.scss
@@ -10,6 +10,7 @@
     bottom: 0;
     z-index: 12;
     display: none;
+    overflow: hidden;
 
     @media (min-width: $media-screen-notebook) {
         display: flex;
